# swcapi

./: .gitignore  pyproject.toml
swcapi/: config.py
